# contractor

./: .anjuta_sym_db.db  .bzrignore  .travis.yml  CMakeLists.txt  HACKING  INSTALL  README.md  meson.build  test_client  test_client.vala  testclient.sh
.github/workflows/: main.yml
cmake/: ValaPrecompile.cmake
data/: CMakeLists.txt  archive-compress.contract  archive.contract  brasero.contract  gnome-bluetooth.contract  gnome-wallpaper.contract  io.elementary.contractor.service.in  meson.build  org.elementary.contractor.service.cmake  org.elementary.contractor.service.in  postler.contract  print.contract  wallpaper.contract
data/contracts/: CMakeLists.txt  archive-compress.contract  archive.contract  gnome-bluetooth.contract
debian/: changelog  contractor.1  contractor.manpages  control  copyright  rules  watch
doc/: index.html
doc/doc/: Build.GETTEXT_PACKAGE.html  Build.PREFIX.html  Build.html  Contractor.ContractFileInfo.ContractFileInfo.for_keyfile.html  Contractor.ContractFileInfo.ContractFileInfo.html  Contractor.ContractFileInfo.conditional_mime.html  Contractor.ContractFileInfo.description.html  Contractor.ContractFileInfo.exec.html  Contractor.ContractFileInfo.exec_string.html  Contractor.ContractFileInfo.filename.html  Contractor.ContractFileInfo.html  Contractor.ContractFileInfo.icon_name.html  Contractor.ContractFileInfo.is_conditional.html  Contractor.ContractFileInfo.is_valid.html  Contractor.ContractFileInfo.mime_types.html  Contractor.ContractFileInfo.name.html  Contractor.ContractFileInfo.strict_condition.html  Contractor.ContractFileInfo.take_multi_args.html  Contractor.ContractFileInfo.take_uri_args.html  Contractor.ContractFileService.ContractFileService.html  Contractor.ContractFileService.conditional_contracts_files.html  Contractor.ContractFileService.exec_string_map.html  Contractor.ContractFileService.get_contract_files_for_type.html  Contractor.ContractFileService.html  Contractor.ContractFileService.initialized.html  Contractor.ContractFileService.list_all_contracts.html  Contractor.ContractFileService.name_id_map.html  Contractor.Contractor.Contractor.html  Contractor.Contractor.GetServicesByLocation.html  Contractor.Contractor.GetServicesByLocationsList.html  Contractor.Contractor.GetServicesForString.html  Contractor.Contractor.html  Contractor.Contractor.list_all_contracts.html  Contractor.html  Translations.html  index.htm
po/: CMakeLists.txt  am.po  bg.po  ca.po  contractor.pot  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  lv.po  ms.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sk.po  (+9 more)
src/: Application.vala  CMakeLists.txt  Contract.vala  ContractDirectory.vala  ContractFile.vala  ContractFileService.vala  ContractKeyFile.vala  ContractManager.vala  ContractMatcher.vala  ContractSorter.vala  ContractSource.vala  Contractor.vala  ContractorFileInfo.vala  DBusService.vala  FileEnumerator.vala  FileService.vala  GenericContract.vala  MimeTypeManager.vala  String.vala  Translations.vala  ablage  config.vala.cmake  contractfileservice.vala  contractor.vala  contractorfileinfo.vala  main.vala  meson.build  test_client  test_client.vala
